Made a few adjustments to CategoryLabel such as setting alignment for the right category text to the right, changed the constructor to no longer accept a String object as a parameter so the left and right label texts are set locally, changing the background color of the class to match the labels to eliminate white spacing.

--- a/NetWorthCalculator/src/networthcalculator/stylesheet.css
+++ b/NetWorthCalculator/src/networthcalculator/stylesheet.css
@@ -7,5 +7,6 @@
 #CategoryLabel .label {
     
     -fx-font-size: 30;
+    -fx-font-family: 'arial';
 }
 
